Add elements to page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Behind the Ears!</title>
+    <title>Shiba Inu Docs</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -12,7 +12,35 @@
 </head>
 
 <body>
-
+    <nav id="navbar">
+        <header>Shiba Inu Documentation</header>
+        <ul>
+            <li><a href="#Shiba_Inu_Basics" class="nav-link">Shiba Inu Basics</a></li>
+            <li><a href="#Shiba_Inu_Tail" class="nav-link">Shiba Inu Tail</a></li>
+            <li><a href="#Shiba_Inu_Bark" class="nav-link">Shiba Inu Bark</a></li>
+            <li><a href="#Shiba_Inu_Personality" class="nav-link">Shiba Inu Personality</a></li>
+            <li><a href="#Shiba_Inu_Diet" class="nav-link">Shiba Inu Diet</a></li>
+        </ul>
+    </nav>
+    <main id="main-doc" class="right">
+        <section class="main-section" id="Shiba_Inu_Basics">
+            <header id="basics">Shiba Inu Basics</header>
+        </section>
+        <section class="main-section" id="Shiba_Inu_Tail">
+            <header id="tail">Shiba Inu Tail</header>
+            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+        </section>
+        <section class="main-section" id="Shiba_Inu_Bark">
+            <header id="bark">Shiba Inu Bark</header>
+        </section>
+        <section class="main-section" id="Shiba_Inu_Personality">
+            <header id="personality">Shiba Inu Personality</header>
+        </section>
+        <section class="main-section" id="Shiba_Inu_Diet">
+            <header id="diet">Shiba Inu Diet</header>
+        </section>
+        
+    </main>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
