--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <nav id="navbar" class="left">
+        <nav id="navbar" class="nav">
             <header>Shiba Inu Documentation</header>
             <ul>
                 <li><a href="#Shiba_Inu_Basics" class="nav-link">Shiba Inu Basics</a></li>
@@ -22,7 +22,7 @@
                 <li><a href="#Shiba_Inu_Diet" class="nav-link">Shiba Inu Diet</a></li>
             </ul>
         </nav>
-        <main id="main-doc" class="right">
+        <main id="main-doc" class="main-content">
             <section class="main-section" id="Shiba_Inu_Basics">
                 <header id="basics">Shiba Inu Basics</header>
                 <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae
@@ -38,7 +38,7 @@
                 <p>Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis
                     tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magneros eu erat. Aliquam erat volutpat. </p>
                 <code class="code">
-                    var x = 6; <br>
+                    var x = 6;
                     var tail = x * 360;
                 </code>
                 <p class="or-code">
@@ -93,9 +93,7 @@
                 </code>
             </section>
         </main>
-        <footer id="footer-info">
-            
-        </footer>
+        <button onclick="topFunction()" id="top-page" title="Go to the top">Top</button>
     </div>
 </body>
 
