Changes to media query to include sizes between 750px to 1598px.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                 </code>
             </section>
         </main>
-        <button onclick="topFunction()" id="top-page" title="Go to the top">Top</button>
+        <!-- Send user back to the top of the page -->
+        <!--<button onclick="topFunction()" id="top-page" title="Go to the top">Top</button>-->
     </div>
 </body>
 
